[gd_scene format=3 uid="uid://bfvy4s72ubmtm"]

[ext_resource type="Script" uid="uid://bixtqgh55xk6v" path="res://Scripts/night_vision_component.gd" id="1_nn08x"]
[ext_resource type="Script" uid="uid://r5j6ia0oq16v" path="res://Scripts/player.gd" id="1_xhfnw"]
[ext_resource type="Texture2D" uid="uid://be23ax5rmgilf" path="res://Assets/Spritesheets/Running spritesheet.png" id="2_52ee3"]
[ext_resource type="Script" uid="uid://ce2u6iny1wxtg" path="res://Scripts/gravity_component.gd" id="2_kpjcp"]
[ext_resource type="Texture2D" uid="uid://doka1iydqgao7" path="res://Assets/Spritesheets/Jumping spritesheet.png" id="3_bhhdu"]
[ext_resource type="Texture2D" uid="uid://bm816itmpkylk" path="res://Assets/Spritesheets/JumpingDown spritesheet.png" id="3_megsn"]
[ext_resource type="Script" uid="uid://dsrw4x0alyvde" path="res://Scripts/input_component.gd" id="4_e80uo"]
[ext_resource type="Script" uid="uid://bvs13gkx2i14h" path="res://Scripts/movement_component.gd" id="5_cxr5p"]
[ext_resource type="Script" uid="uid://dj6uu5nj5hwjc" path="res://Scripts/jump_component.gd" id="6_tdg3f"]
[ext_resource type="PackedScene" uid="uid://4631y3o4xguo" path="res://Scenes/Components/AnimatonComponent.tscn" id="10_yoq75"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0rwas"]
radius = 49.0
height = 162.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_52ee3")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_52ee3")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_52ee3")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_52ee3")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("2_52ee3")
region = Rect2(2000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("2_52ee3")
region = Rect2(3000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("2_52ee3")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("2_52ee3")
region = Rect2(2000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("2_52ee3")
region = Rect2(3000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("2_52ee3")
region = Rect2(1000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("2_52ee3")
region = Rect2(2000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("2_52ee3")
region = Rect2(3000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_teras"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p516"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvoow"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5fqo"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf17c"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_awd2i"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2sks"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rw25"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4y2r"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbv6f"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp15a"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_fayk8"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddly5"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_omi2y"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_75iyv"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrofn"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gg6q"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wenux"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy33c"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ppb"]
atlas = ExtResource("3_megsn")
region = Rect2(2000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_k22kr"]
atlas = ExtResource("3_megsn")
region = Rect2(3000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4i3a"]
atlas = ExtResource("3_megsn")
region = Rect2(0, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_rocfp"]
atlas = ExtResource("3_megsn")
region = Rect2(1000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("3_bhhdu")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("3_bhhdu")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("3_bhhdu")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("3_bhhdu")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("3_bhhdu")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("3_bhhdu")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("3_bhhdu")
region = Rect2(2000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("3_bhhdu")
region = Rect2(3000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("3_bhhdu")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("3_bhhdu")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("3_bhhdu")
region = Rect2(2000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("3_bhhdu")
region = Rect2(3000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("3_bhhdu")
region = Rect2(0, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("3_bhhdu")
region = Rect2(1000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("3_bhhdu")
region = Rect2(2000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("3_bhhdu")
region = Rect2(3000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("3_bhhdu")
region = Rect2(0, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("3_bhhdu")
region = Rect2(1000, 4000, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_qidb7"]
animations = [{
"frames": [{
"duration": 0.3,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_i2e8t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.3,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_y6y60")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_vmcrb")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_teras")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_8p516")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_fvoow")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_v5fqo")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_yf17c")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_awd2i")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_o2sks")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_3rw25")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_u4y2r")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_tbv6f")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_vp15a")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_fayk8")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_ddly5")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_omi2y")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_75iyv")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_yrofn")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_5gg6q")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_wenux")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_vy33c")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_h1ppb")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_k22kr")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_h4i3a")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_rocfp")
}],
"loop": false,
"name": &"jumpDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}],
"loop": false,
"name": &"jumpUp",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" unique_id=1336915041 node_paths=PackedStringArray("gravity_component", "movement_componet", "input_component", "jump_component", "night_vision_component", "animaton_component")]
collision_layer = 3
script = ExtResource("1_xhfnw")
gravity_component = NodePath("GravityComponent")
movement_componet = NodePath("MovementComponent")
input_component = NodePath("InputComponent")
jump_component = NodePath("JumpComponent")
night_vision_component = NodePath("NightVisionComponent")
animaton_component = NodePath("AnimatonComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=155062871]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_0rwas")

[node name="Sprite2D" type="AnimatedSprite2D" parent="." unique_id=784973696]
scale = Vector2(0.14999999, 0.15)
sprite_frames = SubResource("SpriteFrames_qidb7")
autoplay = "default"

[node name="GravityComponent" type="Node" parent="." unique_id=122216828]
script = ExtResource("2_kpjcp")

[node name="InputComponent" type="Node" parent="." unique_id=598979871]
script = ExtResource("4_e80uo")

[node name="MovementComponent" type="Node" parent="." unique_id=1367383793]
script = ExtResource("5_cxr5p")
speed = 200.0

[node name="JumpComponent" type="Node" parent="." unique_id=167222886]
script = ExtResource("6_tdg3f")
jump_velocity = -600.0

[node name="NightVisionComponent" type="Node" parent="." unique_id=1767828531]
script = ExtResource("1_nn08x")
metadata/_custom_type_script = "uid://bixtqgh55xk6v"

[node name="AnimatonComponent" parent="." unique_id=1077718319 node_paths=PackedStringArray("sprite") instance=ExtResource("10_yoq75")]
sprite = NodePath("../Sprite2D")
